RESOLVED FIXED128365
[Cocoa] WKWebProcessPlugInNodeHandle methods leak and may crash
https://bugs.webkit.org/show_bug.cgi?id=128365
Summary [Cocoa] WKWebProcessPlugInNodeHandle methods leak and may crash
mitz
Reported 2014-02-07 01:57:23 PST
[Cocoa] WKWebProcessPlugInNodeHandle methods leak and may crash
Attachments
Add null checks and autorelease return values (2.14 KB, patch)
2014-02-07 01:59 PST, mitz
andersca: review+
mitz
Comment 1 2014-02-07 01:59:09 PST
Created attachment 223435 [details] Add null checks and autorelease return values
mitz
Comment 2 2014-02-07 10:26:42 PST
Note You need to log in before you can comment on or make changes to this bug.