[Cocoa] WKWebProcessPlugInNodeHandle methods leak and may crash https://bugs.webkit.org/show_bug.cgi?id=128365

Reviewed by Anders Carlsson.

* WebProcess/InjectedBundle/API/Cocoa/WKWebProcessPlugInNodeHandle.mm:
(+[WKWebProcessPlugInNodeHandle nodeHandleWithJSValue:inContext:]): Null-check the result
of InjectedBundleNodeHandle::getOrCreate, and autorelease the return value.
(-[WKWebProcessPlugInNodeHandle htmlIFrameElementContentFrame]): Null-check the result of
InjectedBundleNodeHandle::htmlIFrameElementContentFrame, and autorelease the return value.



Canonical link: https://commits.webkit.org/146400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163628 268f45cc-cd09-0410-ab3c-d52691b4dbfc