Source/WebKit2/WebProcess/InjectedBundle/API/Cocoa/WKWebProcessPlugInNodeHandle.mm
@@ -48,14 +48,19 @@ using namespace WebKit;
     JSContextRef contextRef = [context JSGlobalContextRef];
     JSObjectRef objectRef = JSValueToObject(contextRef, [value JSValueRef], 0);
     RefPtr<InjectedBundleNodeHandle> nodeHandle = InjectedBundleNodeHandle::getOrCreate(contextRef, objectRef);
+    if (!nodeHandle)
+        return nil;
 
-    return wrapper(*nodeHandle.release().leakRef());
+    return [wrapper(*nodeHandle.release().leakRef()) autorelease];
 }
 
 - (WKWebProcessPlugInFrame *)htmlIFrameElementContentFrame
 {
     RefPtr<WebFrame> frame = _nodeHandle->htmlIFrameElementContentFrame();
-    return wrapper(*frame.release().leakRef());
+    if (!frame)
+        return nil;
+
+    return [wrapper(*frame.release().leakRef()) autorelease];
 }
 
 - (CGRect)elementBounds
